SFDCProject/src/objects/Sobject_Audit__c.object
<CustomObject>
    <description>This object is used to store the custom audit data related to sobjects. Standard salesforce provided audit fields limit of 20 fields is not sufficient for some of the critical objects so this custom audit capability is implemented.</description>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>Indicate what type of action was performed on this objectl</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field100__c</fullName>
        <label>Field 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>Field 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>Field 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Id100__c</fullName>
        <label>New Id 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Id10__c</fullName>
        <label>New Id 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Id11__c</fullName>
        <label>New Id 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value100__c</fullName>
        <label>New Value 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value10__c</fullName>
        <label>New Value 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value11__c</fullName>
        <label>New Value 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id100__c</fullName>
        <label>Old Id 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id10__c</fullName>
        <label>Old Id 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id11__c</fullName>
        <label>Old Id 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value100__c</fullName>
        <label>Old Value 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value10__c</fullName>
        <label>Old Value 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value11__c</fullName>
        <label>Old Value 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Record Id of the SObject to which this audit record belongs to.</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject_Name__c</fullName>
        <inlineHelpText>API Name of the Sobject to which this audit belongs.</inlineHelpText>
        <label>Sobject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status field captures if we have successfully processed the audit record to dereference the status fields.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Processed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sobject Audit</label>
    <nameField>
        <displayFormat>SAU-{0000000000}</displayFormat>
        <label>Audit#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sobject Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>